Git_WGBH_QC/src/objects/SFDC_Release__c.object
<CustomObject>
    <description>Bugforce Object to track software releases</description>
    <fields>
        <fullName>SFDC_Externally_Announced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Externally Announced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Release_Date__c</fullName>
        <description>Release Date</description>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Release_Status__c</fullName>
        <label>Release Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Release_Type__c</fullName>
        <label>Release Type</label>
        <picklist>
            <picklistValues>
                <fullName>Major</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Fix</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Version__c</fullName>
        <label>Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Release_Date__c</columns>
        <columns>SFDC_Release_Status__c</columns>
        <columns>SFDC_Release_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>